--- a/OpenEXR/CMakeLists.txt
+++ b/OpenEXR/CMakeLists.txt
@@ -62,7 +62,7 @@ INCLUDE_DIRECTORIES (
 FIND_PACKAGE(ZLIB REQUIRED)
 FIND_PACKAGE(ILMBASE REQUIRED)
 
-INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_PATH})
 
 IF (NOT WIN32)
   SET ( PTHREAD_LIB pthread )
